       are not proposed by the Batch-Process form anymore.
     # Apps :
        * Activities :
            - An icon was missing in the theme "chantilly" ('images/meeting_48.png').
        * Tickets :
            - The name of the button to link to a Ticket (visible in configuration) has been fixed.
        * Emails :
            - Some permissions checks in the mail history brick were missing.


== Version 2.3.17 ==

  Users side :
  ------------
     # In the merge view :
        - There were issues with ManyToMany fields.
        - An error 500, when one entity did not exist anymore, has been fixed.
     # In the theme "Chantilly", an icon "Restore" was missing.
     # Apps :
        * Assistants :
            - The UserMessages not related to an entity were not viewable.


== Version 2.3.16 ==

  Users side :
  ------------
    # There were several issues with "Date" CustomFields :
        - They were not usable in filters (because they were proposed with "normal" custom-fields).
        - Their quick-search (i.e. in header of list-views) was disabled.

  Developers side :
  -----------------

    Non breaking changes :
    ----------------------
        # The method 'creme_core.models.CremeUser.has_perm_to_link()' with a ContentType as argument has been fixed;
          it could return 'True' even when the model was related to a forbidden app.


== Version 2.3.15 ==

  UPGRADE NOTE :
    - You should upgrade the minor version of Django 3.2 (3.2.22 or more).
    - You should re-generate the media files (creme generatemedia --settings=[...]).

  Users side :
  ------------
    # Apps :
        * Creme_config :
            - The style of disabled users in users' configuration block was broken (in theme "icecream" & "chantilly").
        * Persons :
            - The summary's title for Opportunities in "card" hat-bricks was not always displaying the number of Opportunities.


== Version 2.3.14 ==

  Users side :
  ------------