@@ -1017,6 +1017,13 @@ class StrategyTestCase(BrickTestCaseMixin, CommercialBaseTestCase):
         self.assertEqual(brick_id, result[0])
         self.get_brick_node(self.get_html_tree(result[1]), brick_id)
 
+    def test_reload_assets_matrix__no_app_perm(self):
+        self.login(is_superuser=False, allowed_apps=('persons',))  # No 'commercial'
+        self.assertGET403(
+            reverse('commercial__reload_matrix_brick', args=(self.UNUSED_PK, self.UNUSED_PK)),
+            data={'brick_id': 'whatever'},
+        )
+
     @skipIfCustomOrganisation
     def test_reload_charms_matrix(self):
         user = self.login()
